# token

lessons/: 1.project_structure.md
lessons/errors/: mollusk_svm_dependency_compatibility_error.md  solana-cli-configuration-and-validator-connection.md  solana_token_program_compilation_errors.md
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
roadmap/: 1.1.cargo.toml_structure.md  1.2.program_cargo.toml.md  how_to_build_program_structure.en.md  how_to_build_program_structure.md  mvp.md  video_script_build_program_structure.md
token/clients/js/src/: mintToATA.ts
token_mvp/: Cargo.toml
token_mvp/program/: Cargo.toml
token_mvp/program/docs/: transfer_vs_transferchecked_scenario.md
token_mvp/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  native_mint.rs  processor.rs  state.rs
token_mvp/program/tests/: processor.rs
