[workspace]
resolver = "2"
members = ["program"]

[workspace.package]
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/yourusername/token"
license = "Apache-2.0"
edition = "2021"


[workspace.dependencies]
solana-program-error = "3.0.0"
solana-program-pack = "3.0.0"
solana-pubkey = "3.0.0"
solana-program-entrypoint = "3.0.0"
solana-instruction = "3.0.0"
thiserror = "2.0"
arrayref = "0.3.9"